--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Little Lemon is a family-owned Mediterranean restaurant in Chicago serving taditional recipes with a modern twist."/>
+    <meta property="og:title" content="Little Lemon Restaurant - Chicago" />
+    <meta property="og:description" content="Discover fresh Mediterranean flavors at Little Lemon. Book your table or order online today!" />
+    <meta property="og:image" content="M:\coursera\web development\Final project\icons_assets\restaurant.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
